--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -33,6 +33,9 @@ dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 
+    implementation 'org.ftclib.ftclib:vision:2.0.1' // vision
+    implementation 'org.ftclib.ftclib:core:2.0.1' // core
+
     implementation "com.acmerobotics.roadrunner:ftc:0.1.13"
     implementation "com.acmerobotics.dashboard:dashboard:0.4.14"
 }
